<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/flash_light"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/content_description_flash_light"
        android:focusable="true"
        android:foreground="@drawable/bg_circle_transparent"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash_on" />


    <ImageView
        android:id="@+id/switch_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/content_description_flip_camera"
        android:focusable="true"
        android:foreground="@drawable/bg_circle_transparent"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/view_finder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flip_camera" />

    <ImageButton
        android:id="@+id/capture_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_camera_capture"
        android:contentDescription="@string/content_description_capture_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>